--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -2,8 +2,7 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Deus - KingCast</title>
+  <title>Jesus - KingCast</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -24,38 +23,9 @@
     }
 
     iframe {
-      margin: 15px auto;
+      margin: 20px auto;
       display: block;
       border-radius: 12px;
-      max-width: 600px;
-      width: 100%;
-    }
-
-    .form-container {
-      margin-top: 40px;
-    }
-
-    input[type="email"] {
-      padding: 10px;
-      width: 250px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      margin-right: 10px;
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 1rem;
-      color: #fff;
-      background: #007acc;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background: #005f99;
     }
 
     .back-button {
@@ -73,68 +43,74 @@
     .back-button:hover {
       background: #005f99;
     }
+
+    .follow-box {
+      margin-top: 40px;
+      padding: 20px;
+      background: #fff;
+      border-radius: 8px;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+      display: inline-block;
+    }
+
+    input[type="email"] {
+      padding: 10px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      width: 250px;
+    }
+
+    button {
+      padding: 10px 20px;
+      margin-left: 10px;
+      background: #007acc;
+      color: #fff;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+    }
+
+    button:hover {
+      background: #005f99;
+    }
   </style>
 </head>
 <body>
   <header>
     <img src="../KingCast.png" alt="Logo KingCast" />
-    <h1>Episódios sobre Deus</h1>
+    <h1>Episódios sobre Jesus</h1>
   </header>
 
-  <!-- Episódios -->
-  <iframe src="https://open.spotify.com/embed/episode/0CvU1KqBpn8nNMV0IrNNg6?utm_source=generator" 
-    height="152" frameborder="0" allowfullscreen 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  <!-- Players -->
+  <iframe src="https://open.spotify.com/embed/episode/35q1zOrBmsCB0EHu04ymWh?utm_source=generator" width="100%" height="232" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <iframe src="https://open.spotify.com/embed/episode/2VPTtr2iJEq2ueG2xIZQqy?utm_source=generator" 
-    height="152" frameborder="0" allowfullscreen 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  <iframe src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl?si=Zx34Mw76QU24ukKfMjlY1A" width="100%" height="232" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <iframe src="https://open.spotify.com/embed/episode/1l3TloiW0KQH8RdymXSrYN?utm_source=generator" 
-    height="152" frameborder="0" allowfullscreen 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
+  <iframe src="https://open.spotify.com/embed/episode/4SdpAuFwc67eSueiS6L7gV?si=bb531142aba948d8" width="100%" height="232" frameBorder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <iframe src="https://open.spotify.com/embed/episode/64NWkPxmUCmT155JLwgpoN?utm_source=generator" 
-    height="152" frameborder="0" allowfullscreen 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-
-  <iframe src="https://open.spotify.com/embed/episode/0oyrugXfdp7Qo7tnDfjCRa?utm_source=generator" 
-    height="152" frameborder="0" allowfullscreen 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-
-  <iframe src="https://open.spotify.com/embed/episode/7nkBSntS4R58YJaDf66jRA?utm_source=generator" 
-    height="152" frameborder="0" allowfullscreen 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
-
-  <!-- Formulário de email -->
-  <div class="form-container">
-    <h2>Siga e receba novidades</h2>
-    <form id="followForm">
-      <input type="email" id="email" name="email" placeholder="Digite seu email" required>
-      <button type="submit">Seguir</button>
-    </form>
-    <p id="msg"></p>
-  </div>
-
-  <!-- Botão voltar -->
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 
+  <!-- Form Seguir -->
+  <div class="follow-box">
+    <h2>Quer receber novidades dos episódios sobre Jesus?</h2>
+    <input type="email" id="email-jesus" placeholder="Digite seu email" required>
+    <button onclick="seguir('Jesus', 'email-jesus')">🔔 Seguir</button>
+  </div>
+
   <script>
-    document.getElementById("followForm").addEventListener("submit", async function(e) {
-      e.preventDefault();
-      const email = document.getElementById("email").value;
+    function seguir(origem, campoId) {
+      let email = document.getElementById(campoId).value;
+      if (!email) {
+        alert("Por favor, digite seu email.");
+        return;
+      }
 
-      // Substituir pela URL do seu Google Apps Script
-      const scriptURL = "SUA_URL_DO_APPS_SCRIPT_AQUI"; 
-
-      const response = await fetch(scriptURL, {
+      fetch("SUA_URL_DO_WEBAPP", {
         method: "POST",
-        body: new FormData(this)
-      });
-
-      document.getElementById("msg").textContent = "Obrigado por seguir! 🎉";
-      document.getElementById("followForm").reset();
-    });
+        body: JSON.stringify({ email: email, origem: origem })
+      })
+      .then(() => alert("Obrigado por seguir os episódios sobre " + origem + "!"));
+    }
   </script>
 </body>
 </html>
