--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -96,7 +96,7 @@
 
   <!-- Episódio 2 -->
   <iframe 
-    src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl?utm_source=generator" 
+    src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl?si=Zx34Mw76QU24ukKfMjlY1A" 
     height="232" frameBorder="0" 
     allowfullscreen 
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
@@ -134,3 +134,4 @@
   </script>
 </body>
 </html>
+
