--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -88,7 +88,7 @@
 
   <!-- Episódio 1 -->
   <iframe 
-    src="https://open.spotify.com/episode/6lQVKVmaKQ8nyvQtZe9aBE?si=6e2e89219d0943c2"
+    src="https://open.spotify.com/embed/episode/6lQVKVmaKQ8nyvQtZe9aBE?utm_source=generator"
     height="232" frameBorder="0" 
     allowfullscreen 
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
@@ -96,7 +96,7 @@
 
   <!-- Episódio 2 -->
   <iframe 
-    src="https://open.spotify.com/episode/6KMtaYjFEt8zHhOUAZeUov?si=04c950ca19fb47c2" 
+    src="https://open.spotify.com/embed/episode/6KMtaYjFEt8zHhOUAZeUov?utm_source=generator" 
     height="232" frameBorder="0" 
     allowfullscreen 
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
@@ -104,13 +104,12 @@
 
    <!-- Episódio 3 -->
   <iframe 
-    src="https://open.spotify.com/episode/0glLBC6gb1cS9eZ0D5HRRl?si=56e7594959cc4eb9" 
+    src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl?utm_source=generator" 
     height="232" frameBorder="0" 
     allowfullscreen 
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
   </iframe>
 
-  
   <!-- Formulário de email -->
   <div class="form-container">
     <h2>Siga e receba novidades</h2>
@@ -143,5 +142,3 @@
   </script>
 </body>
 </html>
-
-
