--- a/Deus/Index.html
+++ b/Deus/Index.html
@@ -31,33 +31,6 @@
       width: 100%;
     }
 
-    .form-container {
-      margin-top: 40px;
-    }
-
-    input[type="email"] {
-      padding: 10px;
-      width: 250px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      margin-right: 10px;
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 1rem;
-      color: #fff;
-      background: #007acc;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background: #005f99;
-    }
-
     .back-button {
       display: inline-block;
       margin-top: 40px;
@@ -83,41 +56,30 @@
 
   <!-- Episódios -->
   <iframe src="https://open.spotify.com/embed/episode/0CvU1KqBpn8nNMV0IrNNg6?utm_source=generator" 
-    height="152" frameborder="0" allowfullscreen 
+    height="152" frameborder="0" 
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
   <iframe src="https://open.spotify.com/embed/episode/2VPTtr2iJEq2ueG2xIZQqy?utm_source=generator" 
-    height="152" frameborder="0" allowfullscreen 
+    height="152" frameborder="0" 
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
   <iframe src="https://open.spotify.com/embed/episode/1l3TloiW0KQH8RdymXSrYN?utm_source=generator" 
-    height="152" frameborder="0" allowfullscreen 
+    height="152" frameborder="0" 
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
   <iframe src="https://open.spotify.com/embed/episode/64NWkPxmUCmT155JLwgpoN?utm_source=generator" 
-    height="152" frameborder="0" allowfullscreen 
+    height="152" frameborder="0" 
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
   <iframe src="https://open.spotify.com/embed/episode/0oyrugXfdp7Qo7tnDfjCRa?utm_source=generator" 
-    height="152" frameborder="0" allowfullscreen 
+    height="152" frameborder="0" 
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
   <iframe src="https://open.spotify.com/embed/episode/7nkBSntS4R58YJaDf66jRA?utm_source=generator" 
-    height="152" frameborder="0" allowfullscreen 
+    height="152" frameborder="0" 
     allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <!-- Formulário de email -->
-  <div class="form-container">
-    <h2>Siga e receba novidades</h2>
-    <form id="followForm">
-      <input type="email" id="email" name="email" placeholder="Digite seu email" required>
-      <button type="submit">Seguir</button>
-    </form>
-    <p id="msg"></p>
-  </div>
-
- <!-- Botão voltar -->
+  <!-- Botão voltar -->
   <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
-
