--- a/index.html
+++ b/index.html
@@ -1,37 +1,132 @@
-<div class="subscribe">
-  <h2>Siga e receba novidades</h2>
-  <form id="subscribeForm">
-    <input type="email" name="email" placeholder="Digite seu email" required>
-    <button type="submit">Seguir</button>
-  </form>
-  <p id="message"></p>
-</div>
-
-<script>
-  document.getElementById("subscribeForm").addEventListener("submit", async function(e) {
-    e.preventDefault();
-    const email = e.target.email.value;
-    let cidade = "Desconhecida";
-    try {
-      const resp = await fetch("https://ipapi.co/json/");
-      const data = await resp.json();
-      cidade = data.city || cidade;
-    } catch {
-      console.warn("Erro ao buscar cidade pelo IP.");
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KingCast - Página Principal</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: #f7f7f7;
+      margin: 0;
+      padding: 20px;
+      color: #333;
     }
 
-    const scriptURL = "https://script.google.com/macros/s/AKfycbwSAMouySWAIrfjZZXuCC0HpYaEI3kS7amSf6fAx13syxRRWvy_TUlIQ1ORw7KUiqynLQ/exec";
+    header img {
+      max-width: 200px;
+      margin-bottom: 20px;
+    }
 
-    const formData = new FormData();
-    formData.append("email", email);
-    formData.append("cidade", cidade);
+    h1 {
+      margin-bottom: 20px;
+    }
 
-    await fetch(scriptURL, {
-      method: "POST",
-      body: formData
+    .folders {
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      margin-top: 30px;
+      flex-wrap: wrap;
+    }
+
+    .folder {
+      display: inline-block;
+      padding: 20px;
+      background: #007acc;
+      color: #fff;
+      border-radius: 12px;
+      text-decoration: none;
+      font-size: 1.2rem;
+      transition: background 0.3s;
+    }
+
+    .folder:hover {
+      background: #005f99;
+    }
+
+    .subscribe {
+      margin-top: 50px;
+    }
+
+    input[type="email"] {
+      padding: 10px;
+      width: 250px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      margin-right: 10px;
+    }
+
+    button {
+      padding: 10px 20px;
+      font-size: 1rem;
+      color: #fff;
+      background: #007acc;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    button:hover {
+      background: #005f99;
+    }
+
+    #message {
+      margin-top: 10px;
+      font-weight: bold;
+      color: green;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="KingCast.png" alt="Logo KingCast" />
+    <h1>Bem-vindo ao KingCast</h1>
+  </header>
+
+  <div class="folders">
+    <a href="Deus/index.html" class="folder">📂 Deus</a>
+    <a href="Jesus/index.html" class="folder">📂 Jesus</a>
+  </div>
+
+  <div class="subscribe">
+    <h2>Siga e receba novidades</h2>
+    <form id="subscribeForm">
+      <input type="email" name="email" placeholder="Digite seu email" required>
+      <button type="submit">Seguir</button>
+    </form>
+    <p id="message"></p>
+  </div>
+
+  <script>
+    document.getElementById("subscribeForm").addEventListener("submit", async function(e) {
+      e.preventDefault();
+      const email = e.target.email.value;
+      let cidade = "Desconhecida";
+      try {
+        const resp = await fetch("https://ipapi.co/json/");
+        const data = await resp.json();
+        cidade = data.city || cidade;
+      } catch {
+        console.warn("Erro ao buscar cidade pelo IP.");
+      }
+
+      const scriptURL = "https://script.google.com/macros/s/AKfycbwSAMouySWAIrfjZZXuCC0HpYaEI3kS7amSf6fAx13syxRRWvy_TUlIQ1ORw7KUiqynLQ/exec";
+
+      const formData = new FormData();
+      formData.append("email", email);
+      formData.append("cidade", cidade);
+
+      await fetch(scriptURL, {
+        method: "POST",
+        body: formData
+      });
+
+      document.getElementById("message").textContent = "Obrigado por seguir! 🎉";
+      e.target.reset();
     });
-
-    document.getElementById("message").textContent = "Obrigado por seguir! 🎉";
-    e.target.reset();
-  });
-</script>
+  </script>
+</body>
+</html>
