--- a/index.html
+++ b/index.html
@@ -3,129 +3,46 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>KingCast - Página Principal</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      background: #f7f7f7;
-      margin: 0;
-      padding: 20px;
-      color: #333;
-    }
-
-    header img {
-      max-width: 200px;
-      margin-bottom: 20px;
-    }
-
-    h1 {
-      margin-bottom: 20px;
-    }
-
-    .folders {
-      display: flex;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 30px;
-      flex-wrap: wrap;
-    }
-
-    .folder {
-      display: inline-block;
-      padding: 20px;
-      background: #007acc;
-      color: #fff;
-      border-radius: 12px;
-      text-decoration: none;
-      font-size: 1.2rem;
-      transition: background 0.3s;
-    }
-
-    .folder:hover {
-      background: #005f99;
-    }
-
-    .subscribe {
-      margin-top: 50px;
-    }
-
-    input[type="email"] {
-      padding: 10px;
-      width: 250px;
-      border: 1px solid #ccc;
-      border-radius: 6px;
-      margin-right: 10px;
-    }
-
-    button {
-      padding: 10px 20px;
-      font-size: 1rem;
-      color: #fff;
-      background: #007acc;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.3s;
-    }
-
-    button:hover {
-      background: #005f99;
-    }
-
-    #message {
-      margin-top: 10px;
-      font-weight: bold;
-      color: green;
-    }
-  </style>
+  <title>KingCast</title>
 </head>
 <body>
-  <header>
-    <img src="KingCast.png" alt="Logo KingCast" />
-    <h1>Bem-vindo ao KingCast</h1>
-  </header>
+  <h1>Siga e receba novidades</h1>
+  <form id="followForm">
+    <input type="email" id="email" name="email" placeholder="Digite seu email" required>
+    <button type="submit">Seguir</button>
+  </form>
+  <p id="msg"></p>
 
-  <div class="folders">
-    <a href="Deus/index.html" class="folder">📂 Deus</a>
-    <a href="Jesus/index.html" class="folder">📂 Jesus</a>
-  </div>
-
-  <div class="subscribe">
-    <h2>Siga e receba novidades</h2>
-    <form id="subscribeForm">
-      <input type="email" name="email" placeholder="Digite seu email" required>
-      <button type="submit">Seguir</button>
-    </form>
-    <p id="message"></p>
-  </div>
-
+  <!-- Aqui entra o script que envia para o Google Apps Script -->
   <script>
-    document.getElementById("subscribeForm").addEventListener("submit", async function(e) {
+    document.getElementById("followForm").addEventListener("submit", async function(e) {
       e.preventDefault();
-      const email = e.target.email.value;
+      const email = document.getElementById("email").value;
       let cidade = "Desconhecida";
+      let ip = "";
+
       try {
+        // Pega localização e IP
         const resp = await fetch("https://ipapi.co/json/");
         const data = await resp.json();
         cidade = data.city || cidade;
-      } catch {
-        console.warn("Erro ao buscar cidade pelo IP.");
+        ip = data.ip || "";
+      } catch (error) {
+        console.warn("Não foi possível capturar cidade/IP", error);
       }
 
-      const scriptURL = "https://script.google.com/macros/s/AKfycbwSAMouySWAIrfjZZXuCC0HpYaEI3kS7amSf6fAx13syxRRWvy_TUlIQ1ORw7KUiqynLQ/exec";
+      // URL do seu Apps Script
+      const scriptURL = "https://script.google.com/macros/s/AKfycbzImoosd1gIzK-MZQmgxpojl_0tXUEFRHNowiI5VPi0JnWbwXl3kTYaeMkHQSe5A2wdjg/exec";
 
       const formData = new FormData();
       formData.append("email", email);
       formData.append("cidade", cidade);
+      formData.append("ip", ip);
 
-      await fetch(scriptURL, {
-        method: "POST",
-        body: formData
-      });
+      await fetch(scriptURL, { method: "POST", body: formData });
 
-      document.getElementById("message").textContent = "Obrigado por seguir! 🎉";
-      e.target.reset();
+      document.getElementById("msg").textContent = "Obrigado por seguir! 🎉";
+      document.getElementById("followForm").reset();
     });
   </script>
 </body>
