--- a/index.html
+++ b/index.html
@@ -1,34 +1,137 @@
-<script>
-document.getElementById("followForm").addEventListener("submit", async function(e) {
-  e.preventDefault();
-  const email = document.getElementById("email").value;
-  let cidade = "Desconhecida";
-  let ip = "";
+<!DOCTYPE html>
+<html lang="pt-BR">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>KingCast - Página Principal</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      text-align: center;
+      background: #f7f7f7;
+      margin: 0;
+      padding: 20px;
+      color: #333;
+    }
 
-  try {
-    const resp = await fetch("https://ipapi.co/json/");
-    const data = await resp.json();
-    cidade = data.city || cidade;
-    ip = data.ip || "";
-  } catch {
-    console.warn("Erro ao obter cidade/IP");
-  }
+    header img {
+      max-width: 200px;
+      margin-bottom: 20px;
+    }
 
-  const scriptURL = "https://script.google.com/macros/s/AKfycbyTSXb2HR37bLX0z74yzUCxIYaiIUueX0k41nGwIINUCn3alwcdSAKlMgtfS2RTqnK_YA/exec";
+    h1 {
+      margin-bottom: 20px;
+    }
 
-  const formData = new FormData();
-  formData.append("email", email);
-  formData.append("cidade", cidade);
-  formData.append("ip", ip);
+    .form-container {
+      margin-top: 40px;
+    }
 
-  const response = await fetch(scriptURL, { method: "POST", body: formData });
+    input[type="email"] {
+      padding: 10px;
+      width: 250px;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      margin-right: 10px;
+    }
 
-  if (response.ok) {
-    document.getElementById("msg").textContent = "Obrigado por seguir! 🎉";
-    e.target.reset();
-  } else {
-    document.getElementById("msg").textContent = "Erro ao enviar. Tente novamente.";
-  }
-});
-</script>
+    button {
+      padding: 10px 20px;
+      font-size: 1rem;
+      color: #fff;
+      background: #007acc;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
 
+    button:hover {
+      background: #005f99;
+    }
+
+    .links {
+      margin-top: 50px;
+    }
+
+    .links a {
+      display: block;
+      margin: 10px 0;
+      font-size: 1.2rem;
+      color: #007acc;
+      text-decoration: none;
+    }
+
+    .links a:hover {
+      text-decoration: underline;
+    }
+
+    #msg {
+      margin-top: 15px;
+      font-weight: bold;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="KingCast.png" alt="Logo KingCast" />
+    <h1>Bem-vindo ao KingCast 🎙️</h1>
+  </header>
+
+  <!-- Formulário de email -->
+  <div class="form-container">
+    <h2>Siga e receba novidades</h2>
+    <form id="followForm">
+      <input type="email" id="email" name="email" placeholder="Digite seu email" required>
+      <button type="submit">Seguir</button>
+    </form>
+    <p id="msg"></p>
+  </div>
+
+  <!-- Links para páginas de episódios -->
+  <div class="links">
+    <h2>Episódios</h2>
+    <a href="paginas/jesus.html">📖 Episódios sobre Jesus</a>
+    <a href="paginas/deus.html">✨ Episódios sobre Deus</a>
+  </div>
+
+  <!-- Script -->
+  <script>
+    document.getElementById("followForm").addEventListener("submit", async function(e) {
+      e.preventDefault();
+      const email = document.getElementById("email").value;
+      let cidade = "Desconhecida";
+      let ip = "";
+
+      try {
+        const resp = await fetch("https://ipapi.co/json/");
+        const data = await resp.json();
+        cidade = data.city || cidade;
+        ip = data.ip || "";
+      } catch {
+        console.warn("Erro ao obter cidade/IP");
+      }
+
+      const scriptURL = "https://script.google.com/macros/s/AKfycbzImoosd1gIzK-MZQmgxpojl_0tXUEFRHNowiI5VPi0JnWbwXl3kTYaeMkHQSe5A2wdjg/exec";
+
+      const formData = new FormData();
+      formData.append("email", email);
+      formData.append("cidade", cidade);
+      formData.append("ip", ip);
+
+      try {
+        const response = await fetch(scriptURL, { method: "POST", body: formData });
+
+        if (response.ok) {
+          document.getElementById("msg").textContent = "Obrigado por seguir! 🎉";
+          e.target.reset();
+        } else {
+          document.getElementById("msg").textContent = "Erro ao enviar. Tente novamente.";
+        }
+      } catch (error) {
+        document.getElementById("msg").textContent = "Erro de conexão.";
+      }
+    });
+  </script>
+</body>
+</html>
