--- a/Jesus/index.html
+++ b/Jesus/index.html
@@ -13,21 +13,13 @@
       padding: 20px;
       color: #333;
     }
-
     header img {
       max-width: 200px;
       margin-bottom: 20px;
     }
-
     h1 {
       margin-bottom: 20px;
     }
-
-    h2 {
-      margin-top: 40px;
-      color: #007acc;
-    }
-
     iframe {
       margin: 20px auto;
       display: block;
@@ -35,7 +27,6 @@
       max-width: 600px;
       width: 100%;
     }
-
     .back-button {
       display: inline-block;
       margin-top: 40px;
@@ -47,7 +38,6 @@
       text-decoration: none;
       transition: background 0.3s;
     }
-
     .back-button:hover {
       background: #005f99;
     }
@@ -55,32 +45,18 @@
 </head>
 <body>
   <header>
-    <img src="../KingCast.png" alt="Logo KingCast" />
+    <img src="KingCast.png" alt="Logo KingCast" />
     <h1>Episódios sobre Jesus</h1>
   </header>
 
-  <!-- Episódio 1 -->
-  <iframe 
-    src="https://open.spotify.com/embed/episode/6lQVKVmaKQ8nyvQtZe9aBE?utm_source=generator"
-    height="232" frameBorder="0" 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-  </iframe>
+  <!-- Episódios -->
+  <iframe src="https://open.spotify.com/embed/episode/6lQVKVmaKQ8nyvQtZe9aBE" height="232" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <!-- Episódio 2 -->
-  <iframe 
-    src="https://open.spotify.com/embed/episode/6KMtaYjFEt8zHhOUAZeUov?utm_source=generator" 
-    height="232" frameBorder="0" 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-  </iframe>
+  <iframe src="https://open.spotify.com/embed/episode/6KMtaYjFEt8zHhOUAZeUov" height="232" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
-  <!-- Episódio 3 -->
-  <iframe 
-    src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl?utm_source=generator" 
-    height="232" frameBorder="0" 
-    allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture">
-  </iframe>
+  <iframe src="https://open.spotify.com/embed/episode/0glLBC6gb1cS9eZ0D5HRRl" height="232" frameborder="0" allowfullscreen allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"></iframe>
 
   <!-- Botão voltar -->
-  <a href="../index.html" class="back-button">⬅ Voltar para a Página Principal</a>
+  <a href="index.html" class="back-button">⬅ Voltar para a Página Principal</a>
 </body>
 </html>
